--- a/estilo.css
+++ b/estilo.css
@@ -1,8 +1,8 @@
 :root{
     --cor-de-fundo:#000000;
     --cor-da-font:#white;
-    --cor-dos-titulos:#ffffff;
-    --cor-de-fundo-cabecalho:#0d8c47;
+    --cor-dos-titulos:#188732;
+    --cor-de-fundo-cabecalho:#ffffff;
 }
 
 body{
