--- a/estilo.css
+++ b/estilo.css
@@ -1,5 +1,5 @@
 :root{
-    --cor-de-fundo:#000000;
+    --cor-de-fundo:#ffffff;
     --cor-da-font:#white;
     --cor-dos-titulos:#188732;
     --cor-de-fundo-cabecalho:#ffffff;
