--- a/estilo.css
+++ b/estilo.css
@@ -2,7 +2,7 @@
     --cor-de-fundo:#ffffff;
     --cor-da-font:#white;
     --cor-dos-titulos:#188732;
-    --cor-de-fundo-cabecalho:#ffffff;
+    --cor-de-fundo-cabecalho:#000000;
 }
 
 body{
