--- a/estilo.css
+++ b/estilo.css
@@ -1,7 +1,7 @@
 :root{
     --cor-de-fundo:#000000;
     --cor-da-font:#white;
-    --cor-dos-titulos:#188732;
+    --cor-dos-titulos:#ffffff;
     --cor-de-fundo-cabecalho:#ffffff;
 }
 
