--- a/estilo.css
+++ b/estilo.css
@@ -1,6 +1,6 @@
 :root{
     --cor-de-fundo:#000000;
-    --cor-da-font:#ffffff;
+    --cor-da-font:#000000;
     --cor-dos-titulos:#ffffff;
     --cor-de-fundo-cabecalho:#ffffff;
 }
