--- a/estilo.css
+++ b/estilo.css
@@ -13,6 +13,7 @@ body{
     color: white;
     font-size:18px;
     font-family: "Inter", sans-serif;
+    background-position: center;
 }
 .rodape{
     background-color: #0d8c47;
