--- a/estilo.css
+++ b/estilo.css
@@ -1,5 +1,5 @@
 :root{
-    --cor-de-fundo:#01833c;
+    --cor-de-fundo:#268831;
     --cor-da-font:#ffffff;
     --cor-dos-titulos:#ffffff;
     --cor-de-fundo-cabecalho:#ffffff;
