--- a/estilo.css
+++ b/estilo.css
@@ -18,7 +18,11 @@ body{
 .rodape{
     background-color: #0d8c47;
     color: white;
+    height: 100;
     
 }
 
-.lista
+.cabecalho{
+background-position: center;
+
+}
